tests/failures/f02_duplicated_tag.rs
use pinny::tag;

#[tag(tag1, tag1)]
#[test]
fn test_compilation_failure() {}

fn main() {}
